--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -16,16 +16,10 @@
         </td>
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
-        <td>
-          <% if book.favorited_by?(current_user) %>
-            <p>
-              <%= link_to "♥ #{book.favorites.count} いいね", book_favorites_path(book), method: :delete, class: "btn btn-danger" %>
-            </p>
-          <% else %>
-            <p>
-              <%= link_to "♡ #{book.favorites.count} いいね", book_favorites_path(book), method: :post, class: "btn btn-success" %>
-            </p>
-          <% end %>
+        <td id="favorite_btn_<%= book.id %>">
+          
+<%= render 'favorites/favorite-btn', book: book %>
+
         </td>
         <td>
           <p class="font-weight-bold">コメント件数：<%= book.book_comments.count %></p>
