--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -38,17 +38,9 @@
           
           <td><%= @existing_book.body %></td>
           
-          <td>
+          <td id="favorite_btn_<%= @existing_book.id %>">
             
- <% if @existing_book.favorited_by?(current_user) %>
-  <p>
-    <%= link_to "♥ #{@existing_book.favorites.count} いいね", book_favorites_path(@existing_book), method: :delete, class: "btn btn-danger" %>
-  </p>
-<% else %>
-  <p>
-    <%= link_to "♡ #{@existing_book.favorites.count} いいね", book_favorites_path(@existing_book), method: :post, class: "btn btn-success" %>
-  </p>
-<% end %>
+<%= render 'favorites/favorite-btn', book: @existing_book %>
             
             
           </td>
