--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -55,39 +55,17 @@
             
         </tr>
       </table>
+ 
+ 
       
-<div>
- <p class="font-weight-bold">コメント件数：<%= @existing_book.book_comments.count %></p>
-  <% @existing_book.book_comments.each do |book_comment| %>
-    <div class="border-bottom mb-3 pb-2">
-      <div class="d-flex align-items-center">
-        <%= image_tag book_comment.user.get_profile_image, alt: "#{book_comment.user.name}のプロフィール画像", size: "50x50", class: "rounded-circle me-2" %>
-        <div>
-          <strong><%= book_comment.user.name %></strong>
-          <span class="text-muted d-block"><%= book_comment.created_at.strftime('%Y/%m/%d') %></span>
-          <p class="mb-0"><%= book_comment.comment %></p>
-        </div>
-        
-        <% if book_comment.user_id == current_user.id %>
-          <div class="ms-auto">
-            <%= link_to '削除', book_book_comment_path(@existing_book, book_comment), method: :delete, data: { confirm: 'このコメントを削除しますか？' }, class: "btn btn-danger btn-sm" %>
-          </div>
-        <% end %>
-        
-      </div>
-    </div>
-  <% end %>
+<div id="comment_index">
+  <%= render "book_comments/index", book: @existing_book %>
 </div>
 
+
+
 <div>
-  <%= form_with(model: [@existing_book, @book_comment], local: true) do |f| %>
-    <div class="form-group">
-      <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに", class: "form-control" %>
-    </div>
-    <div class="form-group">
-      <%= f.submit "送信する", class: "btn btn-primary" %>
-    </div>
-  <% end %>
+  <%= render "book_comments/form", book: @existing_book, book_comment: @book_comment %>
 </div>
 
       
