--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -24,7 +24,9 @@
         <td>
           <p class="font-weight-bold">コメント件数：<%= book.book_comments.count %></p>
         </td>
-        
+        <td>
+          <p>閲覧数: <%= book.impressionist_count %></p>
+        </td>
       </tr>
     <% end %>
   </tbody>
