--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,8 +8,44 @@
     </div>
     <div class='col-md-8 offset-md-1'>
       <h2>Books</h2><p class="mr-3">total_views:<%= @total_views %></p>
-      <%= render 'books/index',books: @books %>
-      <%= render 'book_index',books: @books %>
+      <%= render 'books/index', books: @books %>
+      <%= render 'book_index', books: @books %>
+      <h2>過去7日間の投稿数</h2>
+      <div class="table_width">
+        <table class='table table-bordered'>
+          <thead>
+            <tr>
+              <th>6日前</th>
+              <th>5日前</th>
+              <th>4日前</th>
+              <th>3日前</th>
+              <th>2日前</th>
+              <th>1日前</th>
+              <th>今日</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <% @daily_books.reverse_each do |day_info| %>
+                <td><%= day_info[:count] %></td>
+              <% end %>
+            </tr>
+          </tbody>
+        </table>
+        <canvas id="daily-books-chart" width="400" height="200"></canvas>
+        <div id="daily-books-data" data-daily-books='<%= @daily_books.to_json %>'></div>
+
+          <h2>指定日の投稿数を表示</h2>
+          <%= form_with url: check_daily_books_user_path(@user), method: :get, local: false, id: 'daily-books-form' do %>
+            <%= date_field_tag :date, Date.today, id: 'date-input' %>
+            <%= submit_tag '検索' %>
+          <% end %>
+          
+          <div id="daily-books-result"></div>
+          
+      </div>
     </div>
   </div>
 </div>
+
+<%= javascript_pack_tag 'daily_books_chart' %>
