--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,12 +1,46 @@
-<%= form_with model: @book,local:true do |f| %>
+<%= form_with model: @book, local: true do |f| %>
   <div class="form-group">
     <%= f.label :title %>
     <%= f.text_field :title, class: 'form-control book_title' %>
   </div>
+  
   <div class="form-group">
-    <%= f.label :opinion %>
+    <%= f.label :body %>
     <%= f.text_area :body, class: 'form-control book_body' %>
   </div>
+
+  <!-- 現在の評価が存在するか確認 -->
+  <% if @book.score.present? %>
+    <h4>現在の評価</h4>
+    <p>評価: <%= @book.score %> / 5</p>
+    <div class="ratings">
+      <% (1..5).each do |i| %>
+        <%= image_tag(i <= @book.score ? 'star-on.png' : 'star-off.png') %>
+      <% end %>
+    </div>
+  <% else %>
+    <h4>評価</h4>
+    <div id="post_raty"></div>
+    <%= f.hidden_field :score, id: 'rating-score' %> <!-- 隠しフィールドを追加 -->
+
+    <script>
+      document.addEventListener('DOMContentLoaded', function() {
+        let elem = document.querySelector('#post_raty');
+        let opt = {
+          starOn: "<%= image_path('star-on.png') %>",
+          starOff: "<%= image_path('star-off.png') %>",
+          starHalf: "<%= image_path('star-half.png') %>",
+          half: true,
+          scoreName: 'score',
+          click: function(score) {
+            document.getElementById('rating-score').value = score; // 選択したスコアを隠しフィールドに設定
+          }
+        };
+        raty(elem, opt);
+      });
+    </script>
+  <% end %>
+
   <div class="form-group">
     <%= f.submit class: 'btn btn-success' %>
   </div>
