--- a/app/views/searches/_form.html.erb
+++ b/app/views/searches/_form.html.erb
@@ -1,8 +1,12 @@
 <% if user_signed_in? %>
-  <%= form_with url: search_path, method: :get, local: true do |f| %>
-    <%= f.text_field :content %>
-    <%= f.select :model, options_for_select({"User" => "user", "Book" => "book"}) %>
-    <%= f.select :method, options_for_select({"完全一致" => "perfect", "前方一致" => "forward", "後方一致" => "backward", "部分一致" => "partial"}) %>
-    <%= f.submit "検索" %>
-  <% end %>
+  <div class="form-inline my-2 my-lg-0">
+    <%= form_with url: search_path, method: :get, local: true, class: 'form-inline' do |f| %>
+      <div class="input-group">
+        <%= f.text_field :content, class: 'form-control mr-2', placeholder: '検索...', style: 'width: auto;' %>
+        <%= f.select :model, options_for_select({"User" => "user", "Book" => "book"}), {class: 'form-control mr-2'} %>
+        <%= f.select :method, options_for_select({"完全一致" => "perfect", "前方一致" => "forward", "後方一致" => "backward", "部分一致" => "partial"}), {class: 'form-control mr-2'} %>
+        <%= f.submit "検索", class: 'btn btn-outline-success' %>
+      </div>
+    <% end %>
+  </div>
 <% end %>
