--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -1,3 +1,5 @@
+
+
 <table class='table table-hover table-inverse'>
   <thead>
     <tr>
@@ -8,7 +10,7 @@
     </tr>
   </thead>
   <tbody>
-    <% books.each do |book| %>
+    <% @books.each do |book| %>
       <tr>
         <td><%= link_to(book.user) do %>
           <%= image_tag book.user.get_profile_image, size:'50x50' %>
@@ -17,18 +19,16 @@
         <td><%= link_to book.title.truncate(5), book %></td>
         <td><%= book.body.truncate(5) %></td>
         <td id="favorite_btn_<%= book.id %>">
-          
-<%= render 'favorites/favorite-btn', book: book %>
-
+          <%= render 'favorites/favorite-btn', book: book %>
         </td>
         <td>
-          <p >コメント数：<%= book.book_comments.count %></p>
+          <p>コメント数：<%= book.book_comments.count %></p>
         </td>
         <td>
           <p>閲覧数: <%= book.impressionist_count %></p>
         </td>
         <td>
-        <%= render 'layouts/score', book: book %>
+          <%= render 'layouts/score', book: book %>
         </td>
       </tr>
     <% end %>
