--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -37,7 +37,24 @@
             <h4>評価</h4>
             <%= render 'layouts/score', book: @existing_book %>
           </td>
-        </tr>          
+        </tr>    
+        <tr>
+            <td colspan="7">        
+              <div class="tags">
+                <% if @tags.present? %>
+                  <div class="d-flex flex-wrap">
+                    <% @tags.each do |tag| %>
+              	<span class="badge badge-info mr-2 mb-2">
+              	  <%= link_to "#{tag.name}(#{tag.taggings_count})", tag_path(tag.name), class: "text-white" %>
+              	</span>
+                    <% end %>
+                  </div>
+                <% else %>
+                  <p>登録されているタグはありません</p>
+                <% end %>
+              </div>
+            </td>
+        </tr>
       </table>
  
       <div id="comment_index">
