--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -1,31 +1,41 @@
-
-
 <table class='table table-hover table-inverse'>
   <thead>
     <tr>
       <th></th>
       <th>Title</th>
       <th>Opinion</th>
+      <th>Tags</th> <!-- タグ表示用のカラム -->
       <th colspan="3"></th>
     </tr>
   </thead>
   <tbody>
     <% @books.each do |book| %>
       <tr>
-        <td><%= link_to(book.user) do %>
-          <%= image_tag book.user.get_profile_image, size:'50x50' %>
+        <td>
+          <%= link_to(book.user) do %>
+            <%= image_tag book.user.get_profile_image, size: '50x50' %>
           <% end %>
         </td>
         <td><%= link_to book.title.truncate(5), book %></td>
         <td><%= book.body.truncate(5) %></td>
+        
+        <!-- タグの表示部分 -->
+        <td>
+          <% book.tag_list.each do |tag| %>
+            <span class="badge badge-info mr-1">
+              <%= link_to tag, tag_books_path(tag), class: "text-white" %>
+            </span>
+          <% end %>
+        </td>
+        
         <td id="favorite_btn_<%= book.id %>">
           <%= render 'favorites/favorite-btn', book: book %>
         </td>
         <td>
-          <p>コメント数：<%= book.book_comments.count %></p>
+          <p>Comment:<%= book.book_comments.count %></p>
         </td>
         <td>
-          <p>閲覧数: <%= book.impressionist_count %></p>
+          <p>Views:<%= book.impressionist_count %></p>
         </td>
         <td>
           <%= render 'layouts/score', book: book %>
