--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -11,11 +11,11 @@
       <%= render 'form', book: @book %>
     </div>
     
-    <div class='col-md-8 offset-md-1'>
+    <div class='col-md-9 '>
       <h2>Books</h2>
       
       
-      <div class="sort-options mb-3">
+      <div class="sort-options mb-">
         <%= link_to "新着順", books_path(sort: "new"), class: "btn btn-primary" %>
         <%= link_to "評価順", books_path(sort: "rating"), class: "btn btn-primary" %>
         <%= link_to "お気に入り順", books_path, class: "btn btn-primary" %> <!-- デフォルトでお気に入り順 -->
